--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,10 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <form method="POST" name="username" action="/login">
+          <input class="form-control" type="text" name="username" placeholder="username" style="margin: 1em">
+          <button type="submit" class="btn btn-primary">Sign-in</button>
+        </form>
       </div>
     </div>
   </nav>
