--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,16 +9,14 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <% if (username) { %>
-        <div>Logged in as: <%= username %></div>
-        <div>
-          <form method="POST" action="/logout">
-            <button type="submit" class="btn btn-primary">Logout</button>
+          Logged in as: <%= username %>
+          <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
+            <button type="submit" class="btn btn-danger">Logout</button>
           </form>
-        </div>
         <% } else { %>
-        <form method="POST" name="username" action="/login">
-          <input class="form-control" type="text" name="username" placeholder="username" style="margin: 1em">
-          <button type="submit" class="btn btn-primary">Sign-in</button>
+        <form class="form-inline my-2 my-lg-0" method="POST" name="username" action="/login">
+          <input class="form-constrol mr-sm-2" type="text" name="username" placeholder="username"style="margin: 1em">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign-in</button>
         </form>
       <% } %>
       </div>
