added post register route, user is added to users db when registering. also login cookie created. need to update login route to use new info instead

--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -11,13 +11,12 @@
   <title>TinyApp registration</title>
 </head>
 
-<%- include('partials/_header') %>
-
 <body>
   <main style="margin: 1em;">
     <form method="POST" action="/register">
       E-mail: <input type="email" name="email" placeholder="Enter e-mail">
       Password: <input type="password" name="password" placeholder="Password">
+      <button type="submit">Submit</button>
     </form>
   </main>
   <!-- Bootstrap JS -->
