--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,8 +8,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <% if (username) { %>
-          Logged in as: <%= username %>
+        <% if (user) { %>
+          Logged in as: <%= user.email %>
           <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
             <button type="submit" class="btn btn-danger">Logout</button>
           </form>
