--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -8,12 +8,12 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>TinyApp registration</title>
+  <title>TinyApp Login</title>
 </head>
 
 <body>
   <main style="margin: 1em;">
-    <form method="POST" action="/register">
+    <form method="POST" action="/login">
       E-mail: <input type="email" name="email" placeholder="Enter e-mail">
       Password: <input type="password" name="password" placeholder="Enter password">
       <button type="submit">Submit</button>
