--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,12 +13,11 @@
           <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
             <button type="submit" class="btn btn-danger">Logout</button>
           </form>
-        <% } else { %>
-        <form class="form-inline my-2 my-lg-0" method="POST" name="username" action="/login">
-          <input class="form-constrol mr-sm-2" type="text" name="username" placeholder="username"style="margin: 1em">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign-in</button>
-        </form>
-      <% } %>
+        <% }
+          else { %>
+            <a href="/login">Login</a>
+            <a href="/register">Register</a>
+      <% } %> 
       </div>
     </div>
   </nav>
