--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -16,7 +16,7 @@
     <form method="POST" action="/login">
       E-mail: <input type="email" name="email" placeholder="Enter e-mail">
       Password: <input type="password" name="password" placeholder="Enter password">
-      <button type="submit">Submit</button>
+      <button type="submit">Login</button>
     </form>
   </main>
   <!-- Bootstrap JS -->
