--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,7 +16,7 @@
     <div class="card-header"></div>
     <div class="card-body">
       <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-      <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+      <p class="card-text">Short URL: <a href="<%= longURL %>"><%= shortURL %></a></p>
         <form method="POST" action="/urls/<%= shortURL %>">
           <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em;">
           <button type="submit" class="btn btn-primary">Update</button>
