--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,7 +29,7 @@
         <% for(let url in urls) { %>
         <tr>
           <td><%= url %></td>
-          <td><%= urls[url] %></td>
+          <td><%= urls[url].longURL %></td>
           <td>
             <a href="/urls/<%= url %>">
               <button class="btn btn-primary">Edit</button>
