--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,6 +30,7 @@
         
         <% for(let url in urls) { %>
         <tr>
+         <% if (urls[url].userID === user.id) { %>
           <td><%= url %></td>
           <td><%= urls[url].longURL %></td>
           <td>
@@ -43,7 +44,7 @@
             </form>
           </td>
         </tr>
-        <% } } else {%>
+        <% } } } else {%>
          
       </tbody>
     </table>
