--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,23 +1,23 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    </button> -->
+    <div class="collapse navbar-collapse">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New TinyURL</a>
         <% if (user) { %>
-          Logged in as: <%= user.email %>
-          <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
-            <button type="submit" class="btn btn-danger">Logout</button>
-          </form>
-        <% }
-          else { %>
-            <a href="/login">Login</a>
-            <a href="/register">Register</a>
-      <% } %> 
+        Logged in as: <%= user.email %>
+        <form method="POST" action="/logout">
+          <button type="submit" class="btn btn-danger">Logout</button>
+        </form>
+      <% }
+        else { %>
+          <a href="/login">Login</a>
+          <a href="/register">Register</a>
+        <% } %> 
       </div>
     </div>
   </nav>
