--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,7 +18,7 @@
       <h5 class="card-title">TinyURL for: <%= longURL %></h5>
       <p class="card-text">Short URL: <a href="<%= longURL %>"><%= shortURL %></a></p>
         <form method="POST" action="/urls/<%= shortURL %>">
-          <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em;">
+          <input class="form-control" type="text" name="longURL" placeholder="Remember the http:// !" style="width: 300px; margin: 1em;">
           <button type="submit" class="btn btn-primary">Update</button>
         </form>
     </div>
