--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -13,10 +13,11 @@
 
 <body>
   <main style="margin: 1em;">
+    <h3>Enter your credentials!</h3>
     <form method="POST" action="/login">
-      E-mail: <input type="email" name="email" placeholder="Enter e-mail">
-      Password: <input type="password" name="password" placeholder="Enter password">
-      <button type="submit">Login</button>
+      E-mail: <input type="email" name="email">
+      Password: <input type="password" name="password">
+      <button class="btn btn-primary" type="submit">Login</button>
     </form>
   </main>
   <!-- Bootstrap JS -->
