--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -13,10 +13,11 @@
 
 <body>
   <main style="margin: 1em;">
+    <h3>Register to TinyApp by filling the form:</h3>
     <form method="POST" action="/register">
-      E-mail: <input type="email" name="email" placeholder="Enter e-mail">
-      Password: <input type="password" name="password" placeholder="Enter password">
-      <button type="submit">Submit</button>
+      E-mail: <input type="email" name="email" placeholder="example@domain.com">
+      Password: <input type="password" name="password" placeholder="n0ty0urd0gsn4m3">
+      <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </main>
   <!-- Bootstrap JS -->
