--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,7 +34,7 @@
           <td><%= urls[url].longURL %></td>
           <td>
             <form method="GET" action="/urls/<%= url %>/">
-              <button type class="btn btn-primary">Edit</button>
+              <button type class="btn btn-success">Edit</button>
             </form>
           </td>
           <td>
