--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <div class="">
         <% if (user) { %>
           Logged in as: <%= user.email %>
           <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
@@ -18,6 +19,7 @@
             <a href="/login">Login</a>
             <a href="/register">Register</a>
       <% } %> 
+        </div>
       </div>
     </div>
   </nav>
