--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -19,6 +19,9 @@
       Password: <input type="password" name="password">
       <button class="btn btn-primary" type="submit">Login</button>
     </form>
+    <br>
+    <br>
+    <h6>Yet to register? Then click<form method="GET" action="/register"><button type="submit">here!</button></form></h5>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
