--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -11,17 +11,41 @@
   <title>TinyApp Login</title>
 </head>
 
-<body>
+<!-- <body class="text-center">
+    <main style="margin: 1em;">
+      <h3>Create TinyURL</h3>
+      <form class="form-inline justify-content-center" action="/urls" method="POST">
+        <div class="form-group mb-2">
+          <label for="longURL">Enter a URL:</label>
+          <input class="form-control" type="text" name="longURL" placeholder="Remember the http:// !" style="width: 300px; margin: 1em">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+    </main> -->
+<body class="text-center">
   <main style="margin: 1em;">
+    <br>
+    <br>
     <h3>Enter your credentials!</h3>
-    <form method="POST" action="/login">
-      E-mail: <input type="email" name="email">
-      Password: <input type="password" name="password">
-      <button class="btn btn-primary" type="submit">Login</button>
-    </form>
+    <tbody>
+      <tr>
+        <form method="POST" action="/login">
+        <td>E-mail: <input type="email" name="email"><td>
+        <td>Password: <input class="mr-4" type="password" name="password"></td>
+        <td><button class="btn btn-primary" type="submit">Login</button></td>
+        </form>
+      </tr>
+  </tbody>
     <br>
     <br>
-    <h6>Yet to register? Then click<form method="GET" action="/register"><button type="submit">here!</button></form></h5>
+    <div>
+      <tbody>
+        <tr>
+          <td>Yet to register? Then click here below!</td>
+          <td><form method="GET" action="/register"><button class="btn btn-primary" type="submit">Register</button></form></td>
+        </tr>
+      </tbody>
+    </div>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
