--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -11,38 +11,30 @@
   <title>TinyApp Login</title>
 </head>
 
-<!-- <body class="text-center">
-    <main style="margin: 1em;">
-      <h3>Create TinyURL</h3>
-      <form class="form-inline justify-content-center" action="/urls" method="POST">
-        <div class="form-group mb-2">
-          <label for="longURL">Enter a URL:</label>
-          <input class="form-control" type="text" name="longURL" placeholder="Remember the http:// !" style="width: 300px; margin: 1em">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-      </form>
-    </main> -->
 <body class="text-center">
   <main style="margin: 1em;">
     <br>
     <br>
-    <h3>Enter your credentials!</h3>
+    <h3>Enter your credentials:</h3>
     <tbody>
       <tr>
         <form method="POST" action="/login">
-        <td>E-mail: <input type="email" name="email"><td>
-        <td>Password: <input class="mr-4" type="password" name="password"></td>
-        <td><button class="btn btn-primary" type="submit">Login</button></td>
+          <td>E-mail: <input class="mr-2" type="email" name="email">
+          <td>
+          <td>Password: <input class="mr-3" type="password" name="password"></td>
+          <td><button class="btn btn-primary" type="submit">Login</button></td>
         </form>
       </tr>
-  </tbody>
+    </tbody>
     <br>
     <br>
     <div>
       <tbody>
         <tr>
           <td>Yet to register? Then click here below!</td>
-          <td><form method="GET" action="/register"><button class="btn btn-primary" type="submit">Register</button></form></td>
+          <td>
+            <form method="GET" action="/register"><button class="btn btn-primary" type="submit">Register</button></form>
+          </td>
         </tr>
       </tbody>
     </div>
