--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -11,12 +11,14 @@
   <title>TinyApp registration</title>
 </head>
 
-<body>
+<body class="text-center">
   <main style="margin: 1em;">
+    <br>
+    <br>
     <h3>Register to TinyApp by filling the form:</h3>
     <form method="POST" action="/register">
-      E-mail: <input type="email" name="email" placeholder="example@domain.com">
-      Password: <input type="password" name="password" placeholder="n0ty0urd0gsn4m3">
+      E-mail: <input class="mr-2" type="email" name="email" placeholder="example@domain.com">
+      Password: <input class="mr-3" type="password" name="password" placeholder="n0ty0urd0gsn4m3">
       <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </main>
